infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vut
  labels:
    app.kubernetes.io/part-of: vut
    app.kubernetes.io/managed-by: manual
